--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,58 @@
     transform: rotate(360deg);
   }
 }
+
+.birthday-message {
+  border: 3px solid #ff85c0; /* A pink border */
+  padding: 20px;
+  margin-top: 20px;
+  background-color: #f8f9fa; /* A light background for contrast */
+  border-radius: 15px; /* Rounded borders for a softer look */
+}
+
+.gift-wrapper {
+  padding: 20px;
+  display: inline-block; /* Makes the wrapper size to fit its content */
+  cursor: pointer; /* Indicates clickable items */
+  transition: transform 0.2s; /* Smooth transition for click effect */
+}
+
+.gift-wrapper:hover {
+  transform: scale(1.05); /* Slightly enlarge the gift icon on hover */
+}
+
+.gift-icon {
+  width: 150px; /* Adjust the width as necessary */
+  height: auto; /* This will maintain the aspect ratio of the image */
+  transition: transform 0.3s ease; /* Smooth transition for scaling */
+}
+.gift-wrapper:hover .gift-icon {
+  transform: scale(1.1); /* Slightly enlarge the icon on hover */
+}
+.message-container {
+  /* Ensure the container is not displayed initially */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 10%; /* Adjust as needed to position above or below the gift icon */
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: opacity 3s ease-in-out; /* Slower transition */
+  color: black; /* Text color changed to black */
+  pointer-events: none; /* Ensures clicks go through the message if it's above other clickable elements */
+}
+
+.message-container .thoughtful-message {
+  font-size: 1.5em; /* Adjust text size as needed */
+  padding: 1em;
+  background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent white background for readability */
+  border-radius: 10px; /* Optional: Rounded corners for the message box */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional: subtle shadow for depth */
+}
+
+/* The active class will be added to show the message */
+.active {
+  opacity: 1;
+}
